--- a/SDZ_SageMaker.ipynb
+++ b/SDZ_SageMaker.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "364ccd71-1048-48d7-9ae6-e899be96a302",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "# INSTALL SDZ"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "61e2abe3-f670-483c-a390-68186ebe12b7",
@@ -44,6 +33,7 @@
     "    %cd /home/studio-lab-user/content\n",
     "    %env TF_CPP_MIN_LOG_LEVEL=1\n",
     "    !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
+    "    !pip install -r /home/studio-lab-user/content/SDZ/requirements_versions.txt\n",
     "\n",
     "    #Model\n",
     "    %cd /home/studio-lab-user/content/SDZ/models/Stable-diffusion\n",
@@ -205,9 +195,6 @@
     "    #wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.3.pth\n",
     "    #wget --timestamping https://huggingface.co/uwg/upscaler/resolve/main/GFPGAN/GFPGANv1.4.pth\n",
     "    \n",
-    "    %cd /home/studio-lab-user/content/SDZ\n",
-    "    !REQS_FILE=\"requirements_versions.txt\"\n",
-    "\n",
     "    clear_output()\n",
     "    cprint(f\"SDZ INSTALLED\", color=\"flat_cyan\")\n",
     "    \n",
@@ -361,192 +348,6 @@
     "    \n",
     "    else:\n",
     "        cprint(f\"INVALID OPTION. PLEASE SELECT A VALID OPTION\", color=\"flat_cyan\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c007f7af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Controlnet\n",
-    "canny = \"0\"\n",
-    "openpose = \"0\"\n",
-    "depth = \"0\"\n",
-    "normal_map = \"0\"\n",
-    "mlsd = \"0\"\n",
-    "lineart = \"0\"\n",
-    "soft_edge = \"0\"\n",
-    "scribble = \"0\"\n",
-    "segmentation = \"0\"\n",
-    "shuffle = \"0\"\n",
-    "tile = \"1\"\n",
-    "inpaint = \"0\"\n",
-    "instruct_p2p = \"0\"\n",
-    "t2i_adapter = \"0\"\n",
-    "\n",
-    "cnet_dir = \"/home/studio-lab-user/content/SDZ/extensions/sd-webui-controlnet/models\"\n",
-    "\n",
-    "#=================================================\n",
-    "\n",
-    "from colablib.colored_print import cprint, print_line\n",
-    "print_line(0, color=\"green\")\n",
-    "cprint(f\"[+] Downloading...\", color=\"flat_cyan\")\n",
-    "%cd {cnet_dir}\n",
-    "def main():\n",
-    "    if canny == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_canny_fp16.safetensors -o control_v11p_sd15_canny_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_canny_fp16.yaml -o control_v11p_sd15_canny_fp16.yaml\n",
-    "    if openpose == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_openpose_fp16.safetensors -o control_v11p_sd15_openpose_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_openpose_fp16.yaml -o control_v11p_sd15_openpose_fp16.yaml\n",
-    "    if depth == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11f1p_sd15_depth_fp16.safetensors -o control_v11f1p_sd15_depth_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11f1p_sd15_depth_fp16.yaml -o control_v11f1p_sd15_depth_fp16.yaml\n",
-    "    if normal_map == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_normalbae_fp16.safetensors -o control_v11p_sd15_normalbae_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_normalbae_fp16.yaml -o control_v11p_sd15_normalbae_fp16.yaml\n",
-    "    if mlsd == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_mlsd_fp16.safetensors -o control_v11p_sd15_mlsd_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_mlsd_fp16.yaml -o control_v11p_sd15_mlsd_fp16.yaml\n",
-    "    if lineart == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart_fp16.safetensors -o control_v11p_sd15_lineart_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15s2_lineart_anime_fp16.safetensors -o control_v11p_sd15s2_lineart_anime_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_lineart_fp16.yaml -o control_v11p_sd15_lineart_fp16.yaml\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15s2_lineart_anime_fp16.yaml -o control_v11p_sd15s2_lineart_anime_fp16.yaml\n",
-    "    if soft_edge == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_softedge_fp16.safetensors -o control_v11p_sd15_softedge_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_softedge_fp16.yaml -o control_v11p_sd15_softedge_fp16.yaml\n",
-    "    if scribble == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_scribble_fp16.safetensors -o control_v11p_sd15_scribble_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_scribble_fp16.yaml -o control_v11p_sd15_scribble_fp16.yaml\n",
-    "    if segmentation == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_seg_fp16.safetensors -o control_v11p_sd15_seg_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_seg_fp16.yaml -o control_v11p_sd15_seg_fp16.yaml\n",
-    "    if shuffle == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11e_sd15_shuffle_fp16.safetensors -o control_v11e_sd15_shuffle_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11e_sd15_shuffle_fp16.yaml -o control_v11e_sd15_shuffle_fp16.yaml\n",
-    "    if tile == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11f1e_sd15_tile_fp16.safetensors -o control_v11f1e_sd15_tile_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11f1e_sd15_tile_fp16.yaml -o control_v11f1e_sd15_tile_fp16.yaml\n",
-    "    if inpaint == \"1\": \n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11p_sd15_inpaint_fp16.safetensors -o control_v11p_sd15_inpaint_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11p_sd15_inpaint_fp16.yaml -o control_v11p_sd15_inpaint_fp16.yaml\n",
-    "    if instruct_p2p == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/control_v11e_sd15_ip2p_fp16.safetensors -o control_v11e_sd15_ip2p_fp16.safetensors\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/raw/main/control_v11e_sd15_ip2p_fp16.yaml -o control_v11e_sd15_ip2p_fp16.yaml\n",
-    "    if t2i_adapter == \"1\":\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_style_sd14v1.pth -o t2iadapter_style_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_sketch_sd14v1.pth -o t2iadapter_sketch_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_seg_sd14v1.pth -o t2iadapter_seg_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_openpose_sd14v1.pth -o t2iadapter_openpose_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_keypose_sd14v1.pth -o t2iadapter_keypose_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_depth_sd14v1.pth -o t2iadapter_depth_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_color_sd14v1.pth -o t2iadapter_color_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_canny_sd14v1.pth -o t2iadapter_canny_sd14v1.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_canny_sd15v2.pth -o t2iadapter_canny_sd15v2.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_depth_sd15v2.pth -o t2iadapter_depth_sd15v2.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_sketch_sd15v2.pth -o t2iadapter_sketch_sd15v2.pth\n",
-    "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/ControlNet-v1-1/resolve/main/t2iadapter_zoedepth_sd15v1.pth -o t2iadapter_zoedepth_sd15v1.pth     \n",
-    "main()\n",
-    "print_line(0, color=\"green\")\n",
-    "cprint(f\"[+] All Download Completed.\", color=\"flat_cyan\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac97b13d-7695-498b-b924-650e1925cfbb",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# RUN SDZ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdabfd94-cd65-4974-a048-8c4b70bc5ecf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%cd /home/studio-lab-user/content/SDZ\n",
-    "SDZ_Args = \"--ngrok 27CtKvowx7GncNntBFdaHEIjnoe_4Z2bzEfzhAVea2zwTaJTp --api --enable-insecure-extension-access --xformers --theme=dark --no-download-sd-model --disable-safe-unpickle --enable-insecure-extension-access\"\n",
-    "!COMMANDLINE_ARGS=\"{SDZ_Args}\" REQS_FILE=\"requirements_versions.txt\" python launch.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "648a4362-6d1a-48c6-bca2-84ddb3e5ed84",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "# USEFUL COMMAND"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da73d94c-80be-4a0c-afbb-26aab43d83fa",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# DISK/STORAGE INFO\n",
-    "import os\n",
-    "from colablib.colored_print import cprint, print_line\n",
-    "import psutil\n",
-    "directory = os.getcwd()\n",
-    "disk_space = psutil.disk_usage(directory)\n",
-    "total = disk_space.total / (1024 ** 3)\n",
-    "used = disk_space.used / (1024 ** 3)\n",
-    "free = disk_space.free / (1024 ** 3)\n",
-    "cprint(f\"Total Storage: [ {total:.2f} GB ] Used: [ {used:.2f} GB ] Free: [ {free:.2f} GB ]\", color=\"flat_cyan\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46d8f443-8bef-4689-b165-311bd88afccf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# CLEAN UNNECESSARY CACHE/FILES if you need more space, will not delete your WEBUI Folder.\n",
-    "!pip cache purge\n",
-    "!rm -rf ~/.cache"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bfb5c91-60e3-45fd-a0f9-98d1be0ed027",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DELETE ALL LIBRARY, DON'T run this if you're don't know what are you doing.\n",
-    "%cd ~/\n",
-    "!pip freeze > reqs.txt\n",
-    "!pip uninstall -y -r reqs.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caac6752-8e99-4b47-a31e-bdd5131194fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IF SOMETHING FEELS WRONG AND YOU CAN'T FIX IT, RUN THIS CELL, IT WILL DELETE ENTIRE NOTEBOOK,\n",
-    "# OR IF YOU WANT A FRESH-INSTALL NOTEBOOK, then DO : RUN THIS CELL > STOP RUNTIME > STAR AGAIN.\n",
-    "!rm -rf /home/studio-lab-user/"
    ]
   }
  ],
